Tue Oct 14 17:13:46 2003  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

	* ace/Process.h: Put the ACE_Process copy constructor and
	  assignment operator in the private part of the class to disallow
 	  copying.  Thanks to Adam Fanello <yahoo@fanello.net> for
 	  reporting this.

	* ace/OS.cpp: Added patches to support PHARLAP.  Thanks 
	  to Ira Burton <imburton@micron.com> for supplying these.

Tue Oct 14 13:54:19 2003  Steve Huston  <shuston@riverace.com>
	Picked up from ACE 5.3:
	Wed Jun 11 17:18:39 2003  Steve Huston  <shuston@riverace.com>

	* include/makeinclude/wrapper_macros.GNU: Make SOVERSION
	  user-settable if versioned_so is enabled. Thanks to Craig L.
	  Ching <cching@mqsoftware.com> for this idea.
	  Also moved the versioned_so and SOVERSION setup to after
	  platform_macros.GNU is included so that users can set this stuff
	  up in their platform_macros.GNU file. The ACE_MAJOR_VERSION,
	  etc. variables are still set up before platform_macros.GNU, though,
	  in case platform_macros.GNU wants to use them.

Tue Oct 14 10:45:32 2003  Nanbor Wang  <nanbor@.cs.wustl.edu>

	* Makefile: Added a new CIAO_Core target for building all CIAO
	  core libraries and tools, including everything they need.
	  Thanks to Gautam for suggesting this.

Tue Oct 14 03:43:47 2003  Venkita Subramonian  <venkita@cs.wustl.edu>

	* Kokyu/DSRT_Direct_Dispatcher_Impl_T.cpp: Added this->
	  qualification to instance variables in base class to fix
	  compile warnings in HPUX build.

	* Kokyu/Default_Dispatcher_Impl.cpp: 
	* Kokyu/DSRT_CV_Dispatcher_Impl_T.cpp:
	* Kokyu/Dispatcher_Task.cpp:
	* Kokyu/Dispatcher_Task.h:
	* Kokyu/Kokyu.h:
	* Kokyu/Kokyu_defs.i: Removed/added comments 

Tue Oct 14 05:50:43 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Reactor_Notification_Queue_Test.cpp:
          Fixed compile error in MSVC6 WChar build

Mon Oct 13 17:52:31 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>
