@@ -3698,60 +3698,6 @@ private:
 
 # endif /* ACE_WIN32 */
 
-#if defined (ACE_HAS_VIRTUAL_TIME)
-  static clock_t times (struct tms *buf);
-#endif /* ACE_HAS_VIRTUAL_TIME */
-
-  //changed for ACE_HAS_VIRTUAL_TIME changes.
-
-  static int cond_timedwait_i (ACE_cond_t *cv,
-                       ACE_mutex_t *m,
-                       ACE_Time_Value *);
-
-  static u_int alarm_i (u_int secs);
-
-  static u_int ualarm_i (u_int usecs, u_int interval = 0);
-
-  static u_int ualarm_i (const ACE_Time_Value &tv,
-                         const ACE_Time_Value &tv_interval = ACE_Time_Value::zero);
-
-  static int sleep_i (u_int seconds);
-
-  static int sleep_i (const ACE_Time_Value &tv);
-
-  static int nanosleep_i (const struct timespec *requested,
-                          struct timespec *remaining = 0);
-
-  static int select_i (int width,
-                       fd_set *rfds,
-                       fd_set *wfds,
-                       fd_set *efds,
-                       const ACE_Time_Value *tv = 0);
-
-  static int select_i (int width,
-                       fd_set *rfds,
-                       fd_set *wfds,
-                       fd_set *efds,
-                       const ACE_Time_Value &tv);
-
-  static int poll_i (struct pollfd *pollfds,
-                     u_long len,
-                     const ACE_Time_Value *tv = 0);
-
-  static int poll_i (struct pollfd *pollfds,
-                     u_long len,
-                     const ACE_Time_Value &tv);
-
-  static int sema_wait_i (ACE_sema_t *s);
-
-  static int sema_wait_i (ACE_sema_t *s,
-                          ACE_Time_Value &tv);
-
-  static int sigtimedwait_i (const sigset_t *set,
-                             siginfo_t *info,
-                             const ACE_Time_Value *timeout);
-
-  static ACE_Time_Value gettimeofday_i (void);
 };
 
 /**
