@@ -22,6 +22,7 @@
 
 #include "ace/Handle_Set.h"
 #include "ace/os_include/sys/os_types.h"
+#include "ace/Global_Macros.h"
 
 // Forward declaration
 class ACE_Time_Value;
@@ -415,10 +416,6 @@ protected:
   /// Pathname for the process. Relative path or absolute path or just
   /// the program name.
   ACE_TCHAR process_name_[MAXPATHLEN + 1];
-
-  // = Disallow copying and assignment since we don't support this (yet).
-  ACE_UNIMPLEMENTED_FUNC (ACE_Process (const ACE_Process &))
-  ACE_UNIMPLEMENTED_FUNC (void operator= (const ACE_Process &))
 };
 
 //class ACE_Process_Manager;
@@ -564,6 +561,10 @@ protected:
   ACE_Handle_Set handles_passed_;
   /// Handle duplicates made for the child process.
   ACE_Handle_Set dup_handles_;
+
+  // = Disallow copying and assignment since we don't support this (yet).
+  ACE_UNIMPLEMENTED_FUNC (ACE_Process (const ACE_Process &))
+  ACE_UNIMPLEMENTED_FUNC (void operator= (const ACE_Process &))
 };
 
 
